# cord-message

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: cd-publish.yml  cd-release.yml  ci-check-release.yml  ci-code.yml  ci-security-cron.yml  ci-security-push.yml
ci/: changelog.py
src/: codec.rs  errors.rs  lib.rs  message.rs  pattern.rs
