[package]
name = "cord-message"
version = "0.1.0"
edition = "2018"
authors = ["Cord Contributors"]
license = "MPL-2.0"
description = """
This is an internal crate for the Cord project that provides message transmission and
routing functionality.
"""
homepage = "http://cord-proj.org"
repository = "https://github.com/cord-proj/cord-message"
readme = "README.md"
keywords = ["cord", "stream"]
categories = ["network-programming", "data-structures"]

[dependencies]
bytes = "0.4"
error-chain = "0.12"
tokio-codec = "0.1"
