[package]
name = "cord-message"
version = "0.2.0"
edition = "2018"
authors = ["Cord Contributors"]
license = "MPL-2.0"
description = """
This is an internal crate for the Cord Project that provides message transmission and
comparison functionality.
"""
homepage = "https://cord-proj.org"
repository = "https://github.com/cord-proj/cord-message"
readme = "README.md"
keywords = ["cord", "stream"]
categories = ["network-programming", "data-structures"]
include = ["src/**/*"]

[dependencies]
bytes = "0.5"
error-chain = "0.12"
tokio-util = { version = "0.3", features = [ "codec" ] }
